<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:fontFamily="sans-serif-light"
        android:id="@+id/textView" />
    <EditText
        android:id="@+id/inputName"
        android:inputType="textNoSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/textView"/>
    <Button
        android:id="@+id/nameButton"
        android:layout_below="@id/inputName"
        android:text="@string/confirmName"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/easy"
        android:text="@string/easy"
        android:layout_toLeftOf="@id/normal"
        android:layout_below="@id/nameButton"
        android:layout_width="110dp"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/normal"
        android:text="@string/normal"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/nameButton"
        android:layout_width="110dp"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/hard"
        android:text="@string/hard"
        android:layout_toRightOf="@id/normal"
        android:layout_below="@id/nameButton"
        android:layout_width="110dp"
        android:layout_height="45dp" />
        <RelativeLayout
            android:id="@+id/layout_bottom"
            android:layout_width="fill_parent"
            android:layout_height = "fill_parent"
            android:layout_below="@id/inputName"
            android:layout_alignParentBottom = "true">
            <Button
                android:id="@+id/newButton"
                android:layout_centerInParent="true"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:text="@string/start_name" />
            <Button
                android:layout_below="@id/newButton"
                android:layout_centerHorizontal="true"
                android:id="@+id/high_scores_button"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:text="@string/highScores" />
        </RelativeLayout>
</RelativeLayout>