<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main2"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent">

    <EditText
        android:id="@+id/input_number"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:inputType="textNoSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"/>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/life_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#EFEFEF"
        android:src="@mipmap/life_icon"/>
    <TextView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/lives_number"
        android:textSize="18sp"
        android:layout_alignLeft="@id/life_icon"
        android:layout_alignStart="@id/life_icon"
        android:text="9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@id/input_number"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_here"
        android:id="@+id/hint_text" />
    <TextView
        android:fontFamily="sans-serif-light"
        android:layout_below="@id/hint_text"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_number"
        android:id="@+id/last_number" />
    <info.hoang8f.widget.FButton
        android:layout_below="@id/last_number"
        android:layout_centerHorizontal="true"
        android:id="@+id/try_number"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/tryNumber"
        fbutton:shadowColor="#ABCDEF"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"/>
    <info.hoang8f.widget.FButton
        android:layout_below="@id/try_number"
        android:layout_centerHorizontal="true"
        android:id="@+id/show_answer"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/showMeTheHint"
        fbutton:shadowColor="#ABCDEF"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"/>
</RelativeLayout>
